# lerim-cli

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  vulture_whitelist.py
.github/workflows/: ci.yml  docs.yml  publish.yml
dashboard/: README.md  index.html
dashboard/frontend/: README.md
docs/: adapters.md  architecture.md  changelog.md  cli-reference.md  configuration.md  contributing.md  dashboard.md  evals.md  getting-started.md  index.md  installation.md  linting.md  memory-model.md  quickstart.md  simple-coding-rules.md
docs/cli/: ask.md  daemon.md  dashboard.md  maintain.md  memory.md  overview.md  project.md  serve.md  status.md  sync.md  up-down-logs.md
docs/concepts/: how-it-works.md  memory-model.md  supported-agents.md  sync-maintain.md
docs/configuration/: config-toml.md  model-roles.md  overview.md  tracing.md
docs/contributing/: getting-started.md
docs/guides/: connecting-agents.md  dashboard.md  querying-memories.md
evals/: README.md  common.py  compare.py  eval_config.toml  judge.py  run_dedup.py  run_extraction.py  run_lifecycle.py  run_maintain.py  run_search.py  run_summarization.py  run_sync.py  run_tool_selection.py  scores.py
evals/configs/: eval_minimax_m25.toml  eval_ollama_35b_q4.toml  eval_ollama_4b_q8_think_off.toml  eval_ollama_4b_q8_think_on.toml  eval_ollama_9b_q4.toml
evals/dataset/: __init__.py  build.py  config.toml
evals/judge_prompts/: dedup.md  extraction.md  golden_extraction.md  golden_summarization.md  lifecycle_maintain.md  lifecycle_sync.md  maintain.md  maintain_isolated.md  search.md  summarization.md  sync.md  tool_selection.md
evals/scripts/: bench_models.sh  bench_ollama.sh
evals/traces/: claude-coding-run.json  opencode-coding-run.json
fixtures/: README.md
fixtures/codex/: coding-run.json
notebooks/: dspy_extract_one_round.ipynb  framework_comparison.ipynb  maintain_agent.ipynb  migration_spike.ipynb  opencode_go_provider.ipynb  phase1_test.ipynb  phase2_test.ipynb  providers_tools_proxy.ipynb  spike_codex_litellm.ipynb
scripts/: run_tests.sh  test_ingest_manual.sh
skills/lerim/: SKILL.md  cli-reference.md
src/lerim/: README.md  __init__.py  __main__.py
tests/: README.md  conftest.py  helpers.py  js_render_harness.js  run_tests.sh  test_adapter_common.py  test_adapter_registry.py  test_agent_memory_write_flow.py  test_arg_utils.py  test_catalog_queries.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_config.py  test_config.toml  test_context_layers_e2e.py  test_cursor_adapter.py  test_daemon_sync_maintain.py  test_dashboard_api.py  test_dashboard_read_only_contract.py  test_dashboard_visual_polish.py  test_e2e_full_cycle.py  test_e2e_maintain.py  test_e2e_real.py  test_e2e_sync.py  test_fts.py  test_graph_explorer_frontend.py  test_index_html.py  test_indexer_platform_paths.py  test_integration_agent.py  test_integration_extract.py  test_integration_summarize.py  test_learning_runs.py  test_logging.py  test_maintain_command.py  test_memory_decay.py  test_memory_layout.py  test_memory_record.py  test_memory_search_toggles.py  test_opencode_adapter.py  (+9 more)
tests/e2e/: conftest.py  test_context_layers.py  test_full_cycle.py  test_maintain.py  test_maintain_flow.py  test_memory_write_modes.py  test_real.py  test_sync.py  test_sync_flow.py
tests/integration/: conftest.py  test_agent.py  test_ask_quality.py  test_dspy_adapters.py  test_eval_runners.py  test_extract.py  test_extraction_quality.py  test_judge.py  test_maintain_quality.py  test_memory_write.py  test_providers.py  test_summarize.py
tests/smoke/: conftest.py  test_agent.py  test_agent_smoke.py  test_pipelines.py
(+184 files in other folders)
